# kodland_quiz

./: README.md  pyproject.toml
kodland_quiz/: __init__.py  auth.py  config.py  db.py  quiz.py  sample_questions.json
kodland_quiz/static/: style.css
kodland_quiz/templates/: base.html  index.html  results.html
tests/: test_basic.py
