[tool.poetry]
name = "kodland_quiz"
version = "0.1.0"
description = "Kodland Quiz Application"
authors = ["Bartosz Borowski"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.0"
sqlalchemy = "^2.0.36"
flask-sqlalchemy = "^3.1.1"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
